--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ width: 45%;
 
 
 
-</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Passagem sem título" tags="" position="619,350" size="100,100">&lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css&quot; integrity=&quot;sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO&quot; crossorigin=&quot;anonymous&quot;&gt;
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Passagem sem título" tags="texto-centro" position="619,350" size="100,100">&lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css&quot; integrity=&quot;sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO&quot; crossorigin=&quot;anonymous&quot;&gt;
 
 &lt;h1&gt;Consegue (sobre)viver como um estudante universitário? &lt;/h1&gt;
 
@@ -190,10 +190,10 @@ width: 45%;
 
 Antes de começarmos:
 
-Esta reportagem - construída em forma de jogo - pretende demonstrar os desafios que os jovens têm de enfrentar para chegarem a uma situação de estabilidade financeira. As situações descritas têm por base 31 entrevistas - três das quais retratadas na reportagem multimédia “Se não conseguir trabalho, posso não ter onde dormir” - realizadas a jovens dos 18 aos 30 anos. 
+Esta reportagem - construída em forma de jogo - pretende demonstrar os desafios que os jovens têm de enfrentar para chegarem a uma situação de estabilidade financeira. As situações descritas têm por base 31 entrevistas - três das quais retratadas na &lt;a href=&quot;https://catiabarros.github.io/Sustentabilidade-Financeira-Jovens/&quot; target=&quot;_blank&quot;&gt;reportagem multimédia “Se não conseguir trabalho, posso não ter onde dormir”&lt;/a&gt; - realizadas a jovens dos 18 aos 30 anos. 
 &lt;div class=&quot;texto-centro&quot;&gt; &lt;div class=&quot;btn btn-outline-dark&quot;&gt;[[Continuar]] &lt;/div&gt; &lt;/div&gt; 
 
-Podes ler mais sobre a construção desta reportagem em jogo &lt;a href=&quot;url&quot; target=&quot;_blank&quot;&gt;aqui&lt;/a&gt;.
+Podes ler mais sobre a construção desta reportagem em jogo &lt;a href=&quot;https://catiabarros.github.io/construcao-newsgame/&quot; target=&quot;_blank&quot;&gt;aqui&lt;/a&gt;.
 
 
 &lt;p class=&quot;texto-centro&quot;&gt; &lt;b&gt;Reportagem multimédia:&lt;/b&gt; 
@@ -211,10 +211,10 @@ Cátia Barros
   Como é que a aparência da tua personagem?
   &lt;/div&gt;
   &lt;div class=&quot;col&quot;&gt;
-      &lt;img src=&quot;https://raw.githubusercontent.com/CatiaBarros/fotografias-newsgame/main/catia1.png&quot;  style=&quot;width:100%&quot;&gt; &lt;span class=&quot;btn btn-outline-dark&quot;&gt;&lt;a href=&quot;https://catiabarros.github.io/Sobreviver-estudante-A/&quot;&gt;Opção A&lt;/a&gt;&lt;/span&gt;
+      &lt;img src=&quot;https://raw.githubusercontent.com/CatiaBarros/fotografias-newsgame/main/catia1.png&quot;  style=&quot;width:100%&quot;&gt; &lt;span class=&quot;btn btn-outline-dark&quot;&gt;&lt;a href=&quot;https://catiabarros.github.io/opcao-b/&quot;&gt;Opção A&lt;/a&gt;&lt;/span&gt;
     &lt;/div&gt;
     &lt;div class=&quot;col&quot;&gt;
-      &lt;img src=&quot;https://raw.githubusercontent.com/CatiaBarros/fotografias-newsgame/main/catia2.png&quot;  style=&quot;width:100%&quot;&gt; &lt;span class=&quot;btn btn-outline-dark&quot;&gt;&lt;a&gt;Opção B&lt;/a&gt;&lt;/span&gt;
+      &lt;img src=&quot;https://raw.githubusercontent.com/CatiaBarros/fotografias-newsgame/main/catia2.png&quot;  style=&quot;width:100%&quot;&gt; &lt;span class=&quot;btn btn-outline-dark&quot;&gt;&lt;a href=&quot;https://catiabarros.github.io/Sobreviver-estudante-A/&quot;&gt;Opção B&lt;/a&gt;&lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;
