--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@ Cátia Barros
   Como é que a aparência da tua personagem?
   &lt;/div&gt;
   &lt;div class=&quot;col&quot;&gt;
-      &lt;img src=&quot;https://raw.githubusercontent.com/CatiaBarros/fotografias-newsgame/main/catia1.png&quot;  style=&quot;width:100%&quot;&gt; &lt;span class=&quot;btn btn-outline-dark&quot;&gt;&lt;a href=&quot;https://catiabarros.github.io/opcao-b/&quot;&gt;Opção A&lt;/a&gt;&lt;/span&gt;
+      &lt;img src=&quot;https://raw.githubusercontent.com/CatiaBarros/fotografias-newsgame/main/catia1.png&quot;  style=&quot;width:100%&quot;&gt; &lt;span class=&quot;btn btn-outline-dark&quot;&gt;&lt;a href=&quot;https://catiabarros.github.io/Sobreviver-estudante-A/&quot;&gt;Opção A&lt;/a&gt;&lt;/span&gt;
     &lt;/div&gt;
     &lt;div class=&quot;col&quot;&gt;
-      &lt;img src=&quot;https://raw.githubusercontent.com/CatiaBarros/fotografias-newsgame/main/catia2.png&quot;  style=&quot;width:100%&quot;&gt; &lt;span class=&quot;btn btn-outline-dark&quot;&gt;&lt;a href=&quot;https://catiabarros.github.io/Sobreviver-estudante-A/&quot;&gt;Opção B&lt;/a&gt;&lt;/span&gt;
+      &lt;img src=&quot;https://raw.githubusercontent.com/CatiaBarros/fotografias-newsgame/main/catia2.png&quot;  style=&quot;width:100%&quot;&gt; &lt;span class=&quot;btn btn-outline-dark&quot;&gt;&lt;a href=&quot;https://catiabarros.github.io/opcao-b/&quot;&gt;Opção B&lt;/a&gt;&lt;/span&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;
