--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ Cátia Barros
 &lt;div class=&quot;container&quot;&gt;
   &lt;div class=&quot;row&quot;&gt;
   &lt;div class=&quot;col-12&quot;&gt;
-  Como é que a aparência da tua personagem?
+  Como é a aparência da tua personagem?
   &lt;/div&gt;
   &lt;div class=&quot;col&quot;&gt;
       &lt;img src=&quot;https://raw.githubusercontent.com/CatiaBarros/fotografias-newsgame/main/catia1.png&quot;  style=&quot;width:100%&quot;&gt; &lt;span class=&quot;btn btn-outline-dark&quot;&gt;&lt;a href=&quot;https://catiabarros.github.io/Sobreviver-estudante-A/&quot;&gt;Opção A&lt;/a&gt;&lt;/span&gt;
