--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Cátia Barros e Deyvison
 &lt;b&gt;Newsgame:&lt;/b&gt; 
 Cátia Barros 
 &lt;b&gt;Ilustrações:&lt;/b&gt; 
-&lt;a href=&quot;https://instagram.com/juma.artis?igshid=YmMyMTA2M2Y=&quot; target=&quot;_blank&quot;&gt;Maria João Roddet&lt;/a&gt;
+&lt;a href=&quot;https://instagram.com/juma.artis?igshid=YmMyMTA2M2Y=&quot; target=&quot;_blank&quot;&gt;Maria João Rodet&lt;/a&gt;
 &lt;/p&gt;
 </tw-passagedata><tw-passagedata pid="3" name="Continuar" tags="texto-centro" position="619,649" size="100,100">&lt;link href=&quot;https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css&quot; rel=&quot;stylesheet&quot; integrity=&quot;sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor&quot; crossorigin=&quot;anonymous&quot;&gt;
 
